packages/jsii/test/negatives/neg.non-optional-after-optional-ctor.ts
export class NonOptionalAfterOptional {
  constructor(_arg1: string, _arg2 = 'hello', _arg3: string) {
    return;
  }
}
